Change order of loading css files Remove unnecessary react-dd-menu css file Fix z-index property of dd-menu

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -68,6 +68,10 @@ body {
     padding-right: 20px;
 }
 
+.dd-menu .dd-menu-items {
+    z-index: 1000;
+}
+
 .dropdown .dd-menu-items {
     top: 115px;
     padding: 0;
@@ -105,7 +109,7 @@ body {
     background-image: url('img/menu-separator.png');
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 350px 9px;
+    background-size: contain;
 }
 
 .menu-icon {
